<resources>
    <string name="app_name">Prospect</string>
    <string name="adicionar_tarefa">ADICIONAR TAREFA</string>
    <string name="insira_seu_nome">INSIRA O SEU NOME COMPLETO…</string>
    <string name="registrar">REGISTRAR</string>
    <string name="calendar_button">calendar_button</string>
    <string name="agenda">AGENDA</string>
    <string name="cliente">Clientes</string>
    <string name="ramo">RAMO</string>
    <string name="tel_1">TEL1</string>
    <string name="tel_2">TEL2</string>
    <string name="tel_3">TEL3</string>
    <string name="endereco">ENDEREÇO</string>
    <string name="bairro">BAIRRO</string>
    <string name="cidade">CIDADE</string>
    <string name="nome">NOME</string>
    <string name="indicacao">INDICAÇÃO</string>
    <string name="cargo">CARGO</string>
    <string name="dinheiro">DINHEIRO</string>
    <string name="cheque">CHEQUE</string>
    <string name="duplicata">DUPLICATA</string>
    <string name="cartao">CARTÃO</string>
    <string name="pequeno">PEQUENO</string>
    <string name="medio">MÉDIO</string>
    <string name="grande">GRANDE</string>
    <string name="porte">PORTE</string>
    <string name="recebiveis">RECEBÍVEIS</string>
    <string name="refresh">REFRESH</string>
    <string name="relatorios_button">relatorio button</string>
    <string name="relatorio">Relatorios</string>
    <string name="salvar">SALVAR</string>
    <string name="contato">CONTATO</string>
    <string name="presencial">PRESENCIAL</string>
    <string name="cadastro">CADASTRO</string>
    <string name="nao_atende">NÃO ATENDE</string>
    <string name="restricao">RESTRIÇÃO</string>
    <string name="sem_interesse">SEM INTERESSE</string>
    <string name="reagendar">REAGENDAR</string>
    <string name="obs">OBS</string>
    <string name="enviar">ENVIAR</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="proxima_visita">PRÓXIMA VISITA:</string>
    <string name="data_da_tarefa">DATA DA TAREFA:</string>
    <string name="criar_tarefa">CRIAR TAREFA</string>
    <string name="prospecao">Prospecção</string>
    <string name="cobranca">Cobrança</string>
    <string name="inatividade">Inatividade</string>
    <string name="clientee">CLIENTES</string>
    <string name="autorizado">CONFIRMADO PELO CLIENTE</string>
    <string name="ultimo_bordero">ÚLTIMO BORDERÔ:</string>
    <string name="tarefa">TAREFAS</string>
    <string name="visita_marcada">VISITA MARCADA</string>
    <string name="calendario">Calendário</string>
    <string name="emissao">EMISSÃO:</string>
    <string name="compromisso_agendado">COMPROMISSO AGENDADO</string>
    <string name="gerar_relatorio">gerar relatório</string>
    <string name="p">P</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo">logo</string>
    <string name="date_sample">12/08/2019</string>
    <string name="enviar_relatorio">ENVIAR RELATÓRIO</string>
    <string name="cliente_plus">Adicionar</string>
    <string name="registrar_cliente">CADASTRAR CLIENTE</string>
    <string name="cargo_lowercase">cargo</string>
    <string name="adicionar_cliente">ADICIONAR CLIENTE</string>
    <string name="salvar_alteracoes">SALVAR ALTERAÇÕES</string>
    <string name="editar">editar</string>
    <string name="entrar">ENTRAR</string>
    <string name="email">EMAIL</string>
</resources>

