<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto">
<LinearLayout
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp" android:orientation="vertical">


    <EditText
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/white"
            android:textSize="15sp"
            tools:ignore="Autofill"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nome"
            android:id="@+id/etClientNome"
            android:inputType="textPersonName"/>

    <EditText
            android:layout_marginTop="15dp"
            tools:ignore="Autofill"
            android:layout_width="match_parent"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/white"
            android:layout_height="wrap_content"
            android:hint="@string/ramo"
            android:id="@+id/etClientRamo"
            android:inputType="text"/>

    <EditText
            android:layout_marginTop="15dp"
            tools:ignore="Autofill"
            android:layout_width="match_parent"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/white"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:id="@+id/etClientEmail"
            android:inputType="textEmailAddress"/>


    <EditText
            tools:ignore="Autofill"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="15sp"
            android:backgroundTint="@color/white"
            android:layout_height="wrap_content"
            android:hint="@string/tel_1"
            android:id="@+id/etClientTel1"
            android:inputType="phone"/>

    <EditText
            tools:ignore="Autofill"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/white"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tel_2"
            android:id="@+id/etClientTel2"
            android:inputType="phone"/>

    <EditText
            tools:ignore="Autofill"
            android:layout_width="match_parent"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="15sp"
            android:backgroundTint="@color/white"
            android:layout_height="wrap_content"
            android:hint="@string/tel_3"
            android:id="@+id/etClientTel3"
            android:inputType="phone"/>

    <EditText
            tools:ignore="Autofill"
            android:layout_marginTop="15dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="15sp"
            android:backgroundTint="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/endereco"
            android:id="@+id/etClientEndereco"
            android:inputType="textPostalAddress"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    <EditText
            android:layout_weight="1"
            tools:ignore="Autofill"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bairro"
            android:id="@+id/etClientBairro"
            android:inputType="textPostalAddress"/>

    <EditText
            android:layout_weight="1"
            tools:ignore="Autofill"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/white"
            android:layout_height="wrap_content"
            android:hint="@string/cidade"
            android:id="@+id/etClientCidade"
            android:inputType="textPostalAddress"
    />
    </LinearLayout>

    <EditText
            tools:ignore="Autofill"
            android:inputType="text"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/white"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/indicacao"
            android:id="@+id/etClientIndicacao"
    />

    <EditText
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/white"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cargo"
            android:id="@+id/etClientCargo"
            tools:ignore="Autofill"/>

    <TextView
            android:layout_marginStart="6dp"
            android:layout_marginTop="15dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/white"
            android:textSize="15sp"
            android:textAllCaps="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recebiveis"
    />
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <CheckBox
                android:layout_weight="1"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:buttonTint="@color/white"
                android:textSize="12sp"
                android:text="@string/dinheiro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/cbClientDinheiro"/>

        <CheckBox
                android:layout_weight="1"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:buttonTint="@color/white"
                android:textSize="12sp"
                android:text="@string/cheque"
                android:id="@+id/cbClientCheque"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    <CheckBox
            android:layout_weight="1"
            android:text="@string/duplicata"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="12sp"
            android:buttonTint="@color/white"
            android:id="@+id/cbClientDuplicata"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <CheckBox
            android:layout_weight="1"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:buttonTint="@color/white"
            android:textSize="12sp"
            android:id="@+id/cbClientCartao"
            android:text="@string/cartao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <TextView
            android:layout_marginStart="6dp"
            android:layout_marginTop="15dp"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/porte"
            android:textAllCaps="true"
            android:textSize="15sp"/>
    <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/myRadioGroup">

        <RadioButton
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:buttonTint="@color/white"
                android:textSize="12sp"
                android:layout_height="wrap_content"
                android:id="@+id/rbClientPeq"
                android:text="@string/pequeno"/>

        <RadioButton
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textColorHint="@color/white"
                android:buttonTint="@color/white"
                android:layout_height="wrap_content"
                android:id="@+id/rbClientMed"
                android:text="@string/medio"/>

        <RadioButton
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textColorHint="@color/white"
                android:buttonTint="@color/white"
                android:layout_height="wrap_content"
                android:id="@+id/rbClientGrande"
                android:text="@string/grande"/>

    </RadioGroup>


    <com.google.android.material.button.MaterialButton
            android:layout_marginBottom="300dp"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"
            android:backgroundTint="@color/colorPrimaryDark"
            android:id="@+id/btnClientSave"
            app:cornerRadius="100dp"
            android:padding="15dp"
            android:text="@string/registrar_cliente"/>


</LinearLayout>
</ScrollView>