<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:padding="8dp"
        android:orientation="vertical"
        android:background="@drawable/tarefa_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <TextView
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="italic|bold"
            android:drawableEnd="@drawable/three_dots"
            android:drawableTint="@color/white"
            android:hint="@string/cliente"
            android:textAllCaps="true"
            android:padding="6dp"
            android:textColorHint="@color/white"
            android:background="@drawable/button_border_line"
            android:id="@+id/txtTaskCliente"/>
    <RadioGroup
            android:layout_width="match_parent"
            android:layout_marginTop="8dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/rgTask"
            android:checkedButton="@id/rbTaskProsp">

        <RadioButton
                android:textColor="@color/white"
                android:buttonTint="@color/white"
                android:layout_weight="1"
                android:textSize="13sp"
                android:textStyle="italic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rbTaskProsp"
                android:text="@string/prospecao"/>

        <RadioButton
                android:textColor="@color/white"
                android:buttonTint="@color/white"
                android:textSize="13sp"
                android:textStyle="italic"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rbTaskInat"
                android:text="@string/inatividade"/>

        <RadioButton
                android:textColor="@color/white"
                android:buttonTint="@color/white"
                android:textStyle="italic" android:layout_weight="1"
                android:textSize="13sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rbTaskCobranca"
                android:text="@string/cobranca"/>

    </RadioGroup>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/data_da_tarefa"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:textAllCaps="true"
                android:padding="4dp"
                android:layout_marginEnd="15dp"/>
        <TextView
                android:padding="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_border_line"
                android:textColor="@color/white"
                android:id="@+id/txtData"
                android:textSize="16sp"
                android:drawableEnd="@drawable/ic_calendar_24"
                android:drawablePadding="10dp"
                android:text="@string/date_sample"/>
    </LinearLayout>
    <CheckBox
            android:layout_marginTop="7dp"
            android:textAllCaps="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:id="@+id/cbConfirmadoTarefa"
            android:textSize="13sp"
            android:buttonTint="@color/white"
            android:text="@string/autorizado"/>

    <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:buttonTint="@color/white"
            android:id="@+id/cbAgendadoTarefa"
            android:textAllCaps="true"
            android:textSize="13sp"
            android:text="@string/compromisso_agendado"/>


    <EditText
            android:id="@+id/etObsTarefa"
            android:inputType="textLongMessage"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:backgroundTint="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="2"
            android:hint="@string/obs"
            android:textColorHint="@color/white"
            android:padding="8dp"
            android:textSize="15sp"
            android:textAllCaps="true"
            android:gravity="top" tools:ignore="Autofill"/>

    <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adicionar_tarefa"
            app:cornerRadius="100dp"
            android:padding="15dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:layout_gravity="center_horizontal"
            android:id="@+id/btnAddTask"
            />

</LinearLayout>
